# codex

./: TODO.md  justfile
.github/workflows/: rust-ci-full.yml
codex-rs/: Cargo.toml
codex-rs/app-server/: README.md
codex-rs/app-server-protocol/schema/json/: ClientRequest.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
codex-rs/app-server-protocol/src/protocol/: common.rs
codex-rs/app-server/src/: extensions.rs  mcp_refresh.rs  message_processor.rs
codex-rs/arg0/src/: lib.rs
codex-rs/aws-auth/: Cargo.toml
codex-rs/cli/src/: debug_sandbox.rs
codex-rs/code-mode/: Cargo.toml
codex-rs/code-mode/src/: lib.rs  service_ohos_stub.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core/src/: codex_thread.rs  next_prompt_suggestion.rs
codex-rs/features/src/: lib.rs
codex-rs/sandboxing/src/: lib.rs  manager.rs
codex-rs/tui/src/: app.rs  app_backtrack.rs  app_event.rs  chatwidget.rs  lib.rs  pager_overlay.rs  resume_picker.rs
docs/: codex-agent-capability-analysis.md  codex-agent-next-capability-workplan.md  codex-harmonyos-adaptation-notes.md  codex-harmonyos-plan.md
scripts/harmonyos/: 00-baseline-secret-scan.zsh  01-code-mode-only.zsh  02-multi-agent-smoke.zsh  03-mcp-smoke.zsh  04-plugin-smoke.zsh  05-app-exec-server-smoke.zsh  06-cloud-auth-gui-probe.zsh  07-tui-resume-smoke.zsh  08-mcp-approval-smoke.zsh  09-connector-remote-identity-smoke.zsh  10-multi-agent-cross-process-smoke.zsh  README.md  run-no-compile-smoke.zsh  smoke-common.zsh
scripts/install/: install.sh
(+35 files in other folders)
