[package]
edition.workspace = true
license.workspace = true
name = "codex-aws-auth"
version.workspace = true

[lib]
doctest = false
name = "codex_aws_auth"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
aws-credential-types = { workspace = true }
aws-sigv4 = { workspace = true }
aws-types = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_env = "ohos"))'.dependencies]
aws-config = { workspace = true, features = ["credentials-login"] }

[target.'cfg(target_env = "ohos")'.dependencies]
aws-config = { version = "1", default-features = false, features = [
    "credentials-login",
    "rt-tokio",
] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
